# Crow

./: .clang-format  .coveralls.yml  .drone.yml  .gitignore  .gitmodules  .travis.yml  404.html  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CNAME  Doxyfile  LICENSE  MODULE.bazel  README.md  SECURITY.md  index.html  mkdocs.yml  privacy_policy.html  sitemap.xml  test_fix.cpp  test_request_id.bat  vcpkg.json  versions.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: Tests.yml  build_and_test.yml  build_bazel.yml  cifuzz.yml  codeql.yml  doxygen-gh-pages.yml  submit_coverage.yml
0.3/: 404.html  index.html  sitemap.xml
0.3/reference/: app_8h_source.html  ci__map_8h_source.html  classcrow_1_1_catchall_rule.html  classcrow_1_1_connection.js  classcrow_1_1_crow.js  classcrow_1_1_server-members.html  classcrow_1_1_tagged_rule-members.html  classcrow_1_1_tagged_rule.html  classcrow_1_1_trie-members.html  classcrow_1_1_trie.html  (+96 more)
1.0/: 404.html  index.html  privacy_policy.html  sitemap.xml
1.1/: 404.html  index.html  privacy_policy.html  sitemap.xml
1.2/: 404.html  index.html  privacy_policy.html  sitemap.xml
1.2.1/: 404.html  index.html  privacy_policy.html  sitemap.xml  versions.json
1.3.0/: 404.html  index.html  privacy_policy.html  sitemap.xml
cmake/: CrowConfig.cmake.in  Findasio.cmake  compiler_options.cmake  dependencies.cmake
docs/: building.md  index.md  versions.json
examples/: CMakeLists.txt  example.cpp  example.py  example_blueprint.cpp  example_catchall.cpp  example_chat.cpp  example_chat.html  example_compression.cpp  example_file_upload.cpp  example_json_map.cpp  example_middleware.cpp  example_request_id.cpp  example_static_file.cpp  example_test.py  example_unix_socket.cpp  example_vs.cpp  example_with_all.cpp  helloworld.cpp  helloworld_inject.cpp
examples/hello_world/: CMakeLists.txt  main.cpp
examples/middlewares/: cors.h  example_cookies.cpp  example_cors.cpp  example_session.cpp
examples/ssl/: example_ssl.cpp
examples/websocket/: example_ws.cpp
examples/websocket/templates/: ws.html
html/: _tiny_s_h_a1_8hpp_source.html  annotated.html  annotated_dup.js  app_8h_source.html  ci__map_8h_source.html  classcrow_1_1_base_rule-members.html  classcrow_1_1_base_rule.html  classcrow_1_1_cerr_log_handler-members.html  classcrow_1_1_cerr_log_handler.html  classcrow_1_1_connection-members.html  classcrow_1_1_connection.html  classcrow_1_1_connection.js  classcrow_1_1_crow-members.html  classcrow_1_1_crow.html  classcrow_1_1_crow.js  classcrow_1_1_dynamic_rule-members.html  classcrow_1_1_dynamic_rule.html  classcrow_1_1_dynamic_rule.js  classcrow_1_1_i_log_handler-members.html  classcrow_1_1_i_log_handler.html  classcrow_1_1_router-members.html  classcrow_1_1_router.html  classcrow_1_1_server-members.html  classcrow_1_1_server.html  classcrow_1_1_server.js  classcrow_1_1_tagged_rule-members.html  classcrow_1_1_tagged_rule.html  classcrow_1_1_trie-members.html  classcrow_1_1_trie.html  classcrow_1_1_trie.js  classcrow_1_1_web_socket_rule-members.html  classcrow_1_1_web_socket_rule.html  classcrow_1_1_web_socket_rule.js  classcrow_1_1black__magic_1_1const__str-members.html  classcrow_1_1black__magic_1_1const__str.html  classcrow_1_1detail_1_1dumb__timer__queue-members.html  classcrow_1_1detail_1_1dumb__timer__queue.html  classcrow_1_1json_1_1rvalue-members.html  classcrow_1_1json_1_1rvalue.html  classcrow_1_1json_1_1wvalue-members.html  (+239 more)
include/: crow.h  http.h
master/: 404.html  index.html  privacy_policy.html  sitemap.xml
overrides/: home.html
reference/: annotated.html  annotated_dup.js  app_8h_source.html  ci__map_8h_source.html  classcrow_1_1_base_rule-members.html  classcrow_1_1_base_rule.html  classcrow_1_1_base_rule.js  classcrow_1_1_blueprint-members.html  classcrow_1_1_blueprint.html  classcrow_1_1_catchall_rule-members.html  classcrow_1_1_catchall_rule.html  classcrow_1_1_catchall_rule.js  classcrow_1_1_cerr_log_handler-members.html  classcrow_1_1_cerr_log_handler.html  classcrow_1_1_cerr_log_handler.js  classcrow_1_1_connection-members.html  classcrow_1_1_connection.html  classcrow_1_1_connection.js  classcrow_1_1_crow-members.html  classcrow_1_1_crow.html  classcrow_1_1_crow.js  classcrow_1_1_dynamic_rule-members.html  classcrow_1_1_dynamic_rule.html  classcrow_1_1_i_log_handler-members.html  classcrow_1_1_i_log_handler.html  classcrow_1_1_i_log_handler.js  classcrow_1_1_router-members.html  classcrow_1_1_router.html  classcrow_1_1_router.js  classcrow_1_1_server-members.html  classcrow_1_1_server.html  classcrow_1_1_server.js  classcrow_1_1_tagged_rule-members.html  classcrow_1_1_tagged_rule.html  classcrow_1_1_tagged_rule.js  classcrow_1_1_trie-members.html  classcrow_1_1_trie.html  classcrow_1_1_trie.js  classcrow_1_1_web_socket_rule-members.html  classcrow_1_1_web_socket_rule.html  (+300 more)
scripts/: PKGBUILD  generateDocumentationAndDeploy.sh  merge_all.py  nginx_mime2cpp.py  release.py  release.sh
search/: search_index.json
stylesheets/: colors.css
tests/: CMakeLists.txt  catch.hpp  query_string_tests.cpp  unittest.cpp
tests/external_definition/: CMakeLists.txt  main.cpp
tests/fuzz/: CMakeLists.txt  b64_fuzzer.cpp  build.sh  http_fuzzer.cpp  json_fuzzer.cpp  request_fuzzer.cpp  template_fuzzer.cpp
tests/fuzz/html_corpus/: get.seed
tests/fuzz/template_corpus/: template.seed
tests/img/: CMakeLists.txt  filewith.badext
tests/multi_file/: CMakeLists.txt  main.cpp  secondary.cpp
tests/ssl/: BUILD.bazel  CMakeLists.txt  ssltest.cpp
tests/template/: CMakeLists.txt  crow_extra_mustache_tests.json  mustachetest.cpp  test.py
tests/unit_tests/: test_http_response.cpp  test_json.cpp  test_mustache.cpp  test_utility.cpp  test_websocket.cpp
tests/unittest/: CMakeLists.txt
tests/unittest/include/: Middlewares.h  unittest.h
tests/unittest/src/: app.cpp  black_magic.cpp  blueprints.cpp  compression.cpp  json.cpp  middlewares.cpp  query_string.cpp  requests.cpp  responses.cpp  routing.cpp  ssl.cpp  task_timer.cpp  templates.cpp  utility.cpp  websocket.cpp
v1.1/: versions.json
(+2365 files in other folders)
